Update Intro. Plots and ToDo list for Chap 1-3

--- a/notebooks/Besprechung_2021-06-03.ipynb
+++ b/notebooks/Besprechung_2021-06-03.ipynb
@@ -23,11 +23,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -73,11 +69,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -110,9 +102,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -131,10 +121,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -182,9 +169,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -257,10 +242,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -295,17 +277,14 @@
     }
    ],
    "source": [
-    "mean3 <- compute_elastic_proc2d_mean(data_curves1, knots = knots1, type = \"smooth\", penalty = 2, pfit_method = \"smooth\")\n",
-    "mean4 <- compute_elastic_proc2d_mean(data_curves2, knots = knots2, type = \"smooth\", penalty = 2, pfit_method = \"smooth\")"
+    "Könntet ihr dann bitte einmal in der kommenden Sitzung genau klären, ob die Sitzungen unserer LSK öffentlich sind oder nicht? Es gab nämlich denke ich mal eine Zeit, in der auch Protokolle auf der Website hochgeladen wurden. Wenn die Sitzungen nicht öffentlich sind, dürfen wir auch nicht darüber in unserer Sitzung informieren. Wenn sie öffentlich sind, dann können auch Gäste dran teilnehmen (und das habe ich so nämlich auch schonmal gemacht, bevor ich als LSK Mitglied bestätigt wurde) und dann müssten die Protokolle nach der offiziellen Bestätigung auf der Website hochgeladen werden"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "tags": []
    },
    "outputs": [
     {
