--- a/tex/references.bib
+++ b/tex/references.bib
@@ -1,3 +1,10 @@
+@Manual{Anderson1997,
+  author = {Anderson, C. R.},
+  title = {Object recognition using statistical shape analysis},
+  year = 1997,
+  organization = {University of Leeds},
+  note = {PhD thesis},
+} 
 @article{CederbaumScheiplGreven2018,
   author = {J. {Cederbaum} and F. {Scheipl} and S. {Greven}},
   title = {Fast Symmetric Additive Covariance Smoothing},
@@ -14,7 +21,7 @@
   year = 2016,
 }
 @book{FahrmeierEtAl2013,
-  author = {F. {Ludwig} and T. {Kneib} and S. {Lang} and B. {Marx}},
+  author = {L. {Fahrmeier} and T. {Kneib} and S. {Lang} and B. {Marx}},
   title = {Regression},
   subtitle = {Models, Methods and Applications},
   year = 2013,
@@ -114,13 +121,6 @@
   edition = {2},
   publisher = {Chapman and Hall/CRC},
 }
-@Manual{digits3,
-  author = {Anderson, C. R.},
-  title = {Object recognition using statistical shape analysis},
-  year = 1997,
-  organization = {University of Leeds},
-  note = {PhD thesis},
-} 
 @Manual{elasdics,
   title = {elasdics: Elastic Analysis of Sparse, Dense and Irregular Curves},
   author = {Steyer, L.},
@@ -128,6 +128,14 @@
   note = {R package version 0.1.1},
   url = {https://CRAN.R-project.org/package=elasdics},
 }
+@Manual{R,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2021},
+    url = {https://www.R-project.org/},
+  }
 @Manual{shapes,
   title        = {\texttt{shapes} package},
   author       = {Dryden, I. L.},
